# mcp_rag

./: .gitignore  frontend.html  main.py  pyproject.toml
eval/: chunk_eval.ipynb  different_chunking_stratergies.ipynb  generated_queries_and_excerpts.csv  nvidia_10k.txt  nvidia_10k_utf8.txt  ragas_test.ipynb
src/: ingest.py  query.py  reranking.ipynb  test.ipynb
